added base styling and define page layout with css grid

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/Google_logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link rel="stylesheet" href="css/style.css">
     
     <title>Google</title>
 </head>
 <body>
     <div class="wrapper">
-    <header>
+    <header class="header-section">
         <nav class="nav-wrap">
             <a href="" class="links">Gmail</a>
             <a href="" class="links">Images</a>
@@ -42,7 +43,8 @@
             <a href="#" class="lang-type">Ede Yoruba</a>
             <a href="#" class="lang-type">Nigerian Pidgin</a>
         </div>
-        <footer>
+    </main>
+    <footer class="page-footer">
             <div class="footer-top">
                 <h5>Nigeria</h5>
             </div>
@@ -63,8 +65,7 @@
 
                 </div>
             </div>
-        </footer>
-    </main>
+    </footer>
    </div> 
 </body>
 </html>
