styled the navigation bar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="" class="links">Images</a>
             <div class="icon-wrap">
                 <a href="" class="links">
-                    <img src="" alt="" class="dot-icon">
+                    <img src="img/nine-circles.png" alt="menu icon" class="dot-icon">
                 </a>
             </div>
         </nav>
