styled the serach box

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
         </nav>
     </header>
     <main class="main-content">
-        <img src="img/google.png" alt="google logo" class="logo">
+        <div class="logo-wrapper">
+            <img src="img/google.png" alt="google logo" class="logo">
+        </div>
         <div class="search-container">
-            <i class="fas fa-search"></i>
+            <i class="fas fa-search" style="color:#bbbbbb"></i>
             <input type="text" name="search-box" id="search-box" class="search-box">
             <button class="button-mic">
                 <img src="img/google-mic-small.png" alt="" class="mic">
