styled the footer section and added drop shadows to the search box and search buttons

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     </main>
     <footer class="page-footer">
             <div class="footer-top">
-                <h5>Nigeria</h5>
+                <p>Nigeria</p>
             </div>
             <div class="footer-bottom">
-                <div class="legal">
+                <div class="sales">
                     <a href="#" class="marketing">About</a>
                     <a href="#" class="marketing">Advertising</a>
                     <a href="#" class="marketing">Business</a>
