styled the page to be responsive

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <a href="#" class="marketing">How Search Works</a>
                 </div>
                 <div class="eco-friendly">
-                    <a href="#" class="eco"><img src="img/leaf.png" alt="eco friendly leaf icon"><span>Carcon neutral since 2007</span></a>
+                    <a href="#" class="eco"><img src="img/leaf.png" alt="eco friendly leaf icon"><span>Carbon neutral since 2007</span></a>
                 </div>
                 <div class="legal-container">
                     <a href="#" class="lgeal">Privacy</a>
